--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node": "14.x"
   },
   "dependencies": {
+    "body-parser": "^1.19.1",
     "express": "^4.17.1",
     "lodash": "^4.17.21"
   }
